2004-05-25  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/bgerror.n: Use idiomatic open flags for working with log
	files.  [Bug 959602]

2004-05-24  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclExecute.c (VerifyExprObjType): use GET_WIDE_OR_INT to
	properly have tclIntType used for smaller values.  This corrects
	TclX bug 896727 and any other 3rd party extension that created
	math functions but was not yet WIDE_INT aware in them.

2004-05-24  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tclInterp.c (TclInitLimitSupport): Made limits work on
	platforms where sizeof(void*)!=sizeof(int). [Bug 959193]

2004-05-24 Miguel Sofer <msofer@users.sf.net>

	* doc/set.n: accurate description of name resolution process,
	referring to namespace.n for details [Bug 959180]

2004-05-23  Miguel Sofer <msofer@users.sf.net>

	* generic/tclNamesp.c (Tcl_FindNamespaceVar): [Bug 959052] fixed,
	insuring that no "zombie" variables are found.
	* generic/tclVar.c (TclLookupSimpleVar): comments re [Bug 736729] 
	(predecessor of [Bug 959052]) removed.
	* tests/namespace.test: added tests 17.10-12 

	***POTENTIAL INCOMPATIBILITY***
	The patch modifies non-documented behaviour, and passes every test
	in the testsuite. However, scripts relying on the old behaviour
	may break.
	Note that the only behaviour change concerns the creative writing
	of unset variables. More precisely, which variable will be created
	when neither a namespace variable nor a global variable by that
	name exists, as defined by [info vars]. The new behaviour is that
	the namespace resolution process deems a variable to exist exactly
	when [info vars] finds it - ie, either it has value, or else it
	was "fixed" by a call to [variable].

2004-05-22  Miguel Sofer <msofer@users.sf.net>

	* generic/tclVar.c (TclObjLookupVar, TclObjUnsetVar2): fix for new
	(in tcl8.4) exteriorisations of [Bug 736729] due to the use of
	tclNsVarNameType obj types. Reenabling the use of this objType